--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "type": "git",
     "url": "https://github.com/Crypto-Haruto/Levi.git"
   },
-  "description": "Discord Bot which users can talk to and is powered by OpenAi"
+  "description": "Discord Bot which users can talk to and is powered by OpenAi_OF"
 }
